@@ -1,7 +1,8 @@
 [View]
-View=DistUpgradeViewGtk
+# the views will be tried in this order, if one fails to import, the next
+# is tried
+View=DistUpgradeViewGtk,DistUpgradeViewKDE, DistUpgradeViewText
 #View=DistUpgradeViewNonInteractive
-#View=DistUpgradeViewText
 
 # Distro contains global information about the upgrade
 [Distro]
