@@ -13,6 +13,9 @@ update-manager (1:0.59.12) feisty; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - fix incorrect auto-installed information from meta-pkgs 
       (LP#86921)
+  * dist-upgrade.py:
+    - support fallback when a frontend view can not be imported
+      (LP#89568)
   
 
  --
